apps/tco-demo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tco-demo
  labels:
    app: tco-demo
    environment: production
